tests/type/bad/literal_int_as_bool.hel
foreign io_unit: IO<()>;

x: bool = 1;

main = io_unit;
